fix code blocks overflowing

--- a/styles/syntax.css
+++ b/styles/syntax.css
@@ -4,7 +4,7 @@
     font-size: 11px;
     color: #f8f8f2;
     padding: 5px 0;
-    overflow-x: auto;
+    table-layout: fixed;
 }
 
 .highlighttable .linenos {
@@ -13,10 +13,15 @@
     color: #ffffff;
     padding-left: 5px;
     border-right: 3px solid #525252;
+    vertical-align: top;
 }
 
 .highlighttable .code {
     padding-left: 5px;
+}
+
+.highlight {
+    overflow-x: auto;
 }
 
 .highlight .c { color: #75715e } /* Comment */
